Fixed Contact Us spacing issue

--- a/src/public/Style/css.css
+++ b/src/public/Style/css.css
@@ -342,9 +342,10 @@ td#tableMenu {
 .contactWrapper{
     position:relative;
     top:70px;
+    width: 40%;
     margin-left: auto;
     margin-right: auto;
-    left: 30%;
+
     font-family: OpenSans;
 
 }
